# Bouquinerie

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  prek.toml  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
backend/api/: Cargo.toml
backend/api/src/: auth.rs  error.rs  handlers.rs  health.rs  logging.rs  main.rs  response.rs  session.rs  session_store.rs
backend/api/src/handlers/: auth.rs  authors.rs  books.rs  mod.rs  series.rs
backend/db/: Cargo.toml  seed.sql
backend/db/src/: connection.rs  lib.rs
backend/db/src/entities/: authors.rs  authors_books.rs  books.rs  identifiers.rs  mod.rs  prelude.rs  series.rs  series_books.rs  users.rs
backend/db/src/migrator/: m20260530_000001_create_core_tables.rs  m20260531_000001_add_fk_indexes.rs  m20260601_000001_add_book_files.rs  m20260603_000001_remove_isbn.rs  m20260603_000002_user_tables.rs  m20260603_000003_create_sessions.rs  mod.rs
backend/domain/: Cargo.toml
backend/domain/src/entities/: authors.rs  authors_books.rs  book_files.rs  books.rs  identifiers.rs  mod.rs  prelude.rs  series.rs  users.rs
backend/ingestion/: Cargo.toml
backend/ingestion/src/: config.rs  lib.rs  library.rs  metadata.rs  processor.rs  watcher.rs
backend/repository/: Cargo.toml
backend/repository/src/: error.rs  lib.rs
backend/repository/src/authors/: db.rs  mock.rs  mod.rs
backend/repository/src/books/: db.rs  mock.rs  mod.rs
backend/repository/src/series/: db.rs  mock.rs  mod.rs
frontend/: openapi.json  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/screens/: authors_screen.dart  books_screen.dart  series_screen.dart
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  style.css  vite-env.d.ts
web/src/api/: client.ts
web/src/components/: AppLayout.vue  BookCard.vue  BookGrid.vue  BookListItem.vue  BottomNav.vue  ColorBox.vue  EmptyState.vue  ErrorState.vue  PaginationBar.vue  Paginator.vue  PaletteRow.vue
web/src/components/book/: BookCard.vue  BookCover.vue  BookListItem.vue
web/src/components/layout/: AppLayout.vue  BottomNav.vue  NavigationRail.vue
web/src/components/primitive/: AppButton.vue  BackButton.vue  LoadingState.vue  PageHeader.vue
web/src/composables/: usePaginatedList.ts  usePlaceholderCover.ts  useResponsivePageSize.ts
web/src/layouts/: AppLayout.vue  NavRail.vue
web/src/router/: index.ts
web/src/services/: auth.ts  authors.ts  books.ts  series.ts
web/src/stores/: auth.ts  authors.ts  books.ts  series.ts
web/src/styles/: base.css  common.css  fonts.css  tokens.css
web/src/types/: api.d.ts
web/src/utils/: format.ts
web/src/views/: AuthorDetailView.vue  AuthorsView.vue  BookDetail.vue  BookDetailView.vue  BooksView.vue  DashboardView.vue  LoginView.vue  RegisterView.vue  SeriesDetailView.vue  SeriesView.vue
web/src/views/dev/: Palette.vue
