[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tracing = "0.1"
