[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
utoipa = { version = "5.5.0", features = ["uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
clap = "4.6.1"
