[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]

chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "2.0.0-rc.38", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5.5.0", features = ["uuid", "chrono"] }
