[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
domain = { path = "../domain"}
epub = "2.1"
hex = "0.4"
itertools = "0.14.0"
notify = "6"
sea-orm = { version = "2.0.0-rc.38", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "signal", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
